--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.2",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
+    "react-emotion": "^10.0.0",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
     "react-number-format": "^4.9.1",
