--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-slick": "^0.28.1",
     "react-spring": "^9.4.2",
     "react-toastify": "^8.1.0",
+    "recharts": "^2.1.10",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
